Doc_RenpyLauncher/log.txt
Tue Apr  5 11:37:18 2022
Windows-10-10.0.19041
Ren'Py 7.4.11.2266
 

Bootstrap to the start of init.init took 0.08s
Early init took 0.00s
Loader init took 0.02s
Loading error handling took 0.02s
Loading script took 0.16s
Loading save slot metadata. took 0.01s
Loading persistent took 0.00s

File "game/script.rpy", line 69: expected ':' not found.
    else
        ^
DPI scale factor: 1.000000
nvdrs: Loaded, about to disable thread optimizations.
nvdrs: Disabled thread optimizations.
Interface start took 0.43s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1920, 1080)
swap interval: 1 frames
Windowed mode.
Vendor: 'NVIDIA Corporation'
Renderer: 'NVIDIA GeForce MX150/PCIe/SSE2'
Version: '4.6.0 NVIDIA 512.15'
Display Info: None
Screen sizes: virtual=(1280, 720) physical=(1280, 720) drawable=(1280, 720)
Maximum texture size: 4096x4096
Resetting cache.
Bootstrap to the start of init.init took 15.98s
Early init took 0.00s
Loader init took 0.02s
Loading error handling took 0.02s
Loading script took 0.18s
Loading save slot metadata. took 0.01s
Loading persistent took 0.00s
Importing _renpysteam: ImportError('No module named _renpysteam',)
Running init code took 0.06s
Loading analysis data took 0.01s
Analyze and compile ATL took 0.00s
Index archives took 0.00s
Backing up script files to 'C:\\Users\\glenn\\AppData\\Roaming/RenPy/backups\\Doc_RenpyLauncher':
Dump and make backups. took 0.08s
Cleaning cache took 0.00s
Making clean stores took 0.00s
Initial gc. took 0.02s
DPI scale factor: 1.000000
nvdrs: Loaded, about to disable thread optimizations.
nvdrs: Disabled thread optimizations.
Creating interface object took 0.31s
Cleaning stores took 0.00s
Init translation took 0.03s
Build styles took 0.00s
Load screen analysis took 0.00s
Analyze screens took 0.01s
Save screen analysis took 0.03s
Prepare screens took 0.05s
Save pyanalysis. took 0.00s
Save bytecode. took 0.02s
Running _start took 0.00s
Performance test:
Interface start took 0.04s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1920, 1080)
swap interval: 1 frames
Windowed mode.
Vendor: 'NVIDIA Corporation'
Renderer: 'NVIDIA GeForce MX150/PCIe/SSE2'
Version: '4.6.0 NVIDIA 512.15'
Display Info: None
Screen sizes: virtual=(1280, 720) physical=(1280, 720) drawable=(1280, 720)
Maximum texture size: 4096x4096

Full traceback:
  File "game/script.rpy", line 67, in script
    if book=True:
  File "renpy/ast.py", line 1898, in execute
    if renpy.python.py_eval(condition):
  File "renpy/python.py", line 2274, in py_eval
    code = py_compile(code, 'eval')
  File "renpy/python.py", line 835, in py_compile
    raise e
SyntaxError: invalid syntax (script.rpy, line 67)

While running game code:
  File "game/script.rpy", line 67, in script
    if book=True:
SyntaxError: invalid syntax (script.rpy, line 67)
Resetting cache.
Bootstrap to the start of init.init took 57.33s
Early init took 0.00s
Loader init took 0.02s
Loading error handling took 0.02s
Loading script took 0.11s
Loading save slot metadata. took 0.01s
Loading persistent took 0.00s
Importing _renpysteam: ImportError('No module named _renpysteam',)
Running init code took 0.03s
Loading analysis data took 0.02s
Analyze and compile ATL took 0.00s
Index archives took 0.00s
Backing up script files to 'C:\\Users\\glenn\\AppData\\Roaming/RenPy/backups\\Doc_RenpyLauncher':
Dump and make backups. took 0.06s
Cleaning cache took 0.00s
Making clean stores took 0.00s
Initial gc. took 0.03s
DPI scale factor: 1.000000
nvdrs: Loaded, about to disable thread optimizations.
nvdrs: Disabled thread optimizations.
Creating interface object took 0.30s
Cleaning stores took 0.00s
Init translation took 0.04s
Build styles took 0.00s
Load screen analysis took 0.00s
Analyze screens took 0.01s
Save screen analysis took 0.03s
Prepare screens took 0.06s
Save pyanalysis. took 0.00s
Save bytecode. took 0.01s
Running _start took 0.00s
Performance test:
Interface start took 0.05s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1920, 1080)
swap interval: 1 frames
Windowed mode.
Vendor: 'NVIDIA Corporation'
Renderer: 'NVIDIA GeForce MX150/PCIe/SSE2'
Version: '4.6.0 NVIDIA 512.15'
Display Info: None
Screen sizes: virtual=(1280, 720) physical=(1280, 720) drawable=(1280, 720)
Maximum texture size: 4096x4096
Cleaning stores took 0.00s
Init translation took 0.00s
Build styles took 0.01s
Load screen analysis took 0.02s
Analyze screens took 0.00s
Prepare screens took 0.00s
Running _start took 0.00s
Cleaning stores took 0.00s
Init translation took 0.00s
Build styles took 0.01s
Load screen analysis took 0.02s
Analyze screens took 0.00s
Prepare screens took 0.00s
Running _start took 0.00s
Cleaning stores took 0.00s
Init translation took 0.00s
Build styles took 0.00s
Load screen analysis took 0.02s
Analyze screens took 0.00s
Prepare screens took 0.00s
Running _start took 0.00s
